# CPP-Pro

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
checkpoints/frozen_600m_seqcnn/: metrics.json  seed0.pt  seed1.pt  seed2.pt  seed3.pt  seed4.pt
checkpoints/frozen_600m_seqcnn_hnm/: metrics.json  seed0.pt  seed1.pt  seed2.pt  seed3.pt  seed4.pt
checkpoints/hnm_round0/: metrics.json  seed0.pt  seed1.pt  seed2.pt  seed3.pt  seed4.pt  train_info.json
checkpoints/hnm_round2/: metrics.json  seed0.pt  seed1.pt  seed2.pt  seed3.pt  seed4.pt  train_info.json
cppro/: __init__.py  embed.py  heads.py  score.py
dataset/: README.md  build_v6_split.py
dataset/sources/: cppsite3_natural.csv  (+9 more)
results/: README.md  head_sweep_600m.md  head_sweep_600m_per_seed.csv  head_sweep_600m_summary.csv  head_sweep_600m_test_preds.csv  head_sweep_6b.md  head_sweep_6b_per_seed.csv  head_sweep_6b_summary.csv  head_sweep_6b_test_preds.csv  hnm_fp_rate.md  hnm_mined_negatives_6b.csv  hnm_round0_hard_negatives.csv  hnm_round1_hard_negatives_600m.csv  hnm_round2_hard_negatives.csv  hnm_round3_hard_negatives_600m.csv  hnm_round4_hard_negatives.csv  hnm_rounds.csv  hnm_rounds_600m.csv  hnm_state.json  hnm_state_600m.json  plm4cpps_640_on_v6_test.json
scripts/: extract_600m_unused.py  extract_embeddings_6b_forge.py  extract_v6_esmc600m.py  head_bootstrap.py  head_sweep_6b.py  hnm_round_6b.py  make_key_figures.py  run_plm4cpps_v6.py  score_designs_600m.py  score_designs_with_6b_hnm.py  train_save_600m.py  train_save_600m_hnm.py  train_save_hnm_ensemble.py
skills/: README.md
(+15 files in other folders)
